syntax = "proto3";

option go_package = "v1";
option java_package = "io.stackrox.proto.api.v1";

import weak "google/api/annotations.proto";
import "api/v1/common.proto";
import "api/v1/search_service.proto";
import "storage/service_account.proto";

package v1;

// API specific objects.
////////////////////////

// A list of service accounts (free of scoped information)
// Next Tag: 2
message ListServiceAccountResponse {
    repeated storage.ServiceAccount service_accounts = 1;
}

// One service account (free of scoped information)
// Next Tag: 2
message GetServiceAccountResponse {
    storage.ServiceAccount service_account = 1;
}

service ServiceAccountService {

    rpc GetServiceAccount (ResourceByID) returns (GetServiceAccountResponse) {
        option (google.api.http) = {
            get: "/v1/serviceaccounts/{id}"
        };
    }

    rpc ListServiceAccounts (RawQuery) returns (ListServiceAccountResponse) {
        option (google.api.http) = {
            get: "/v1/serviceaccounts"
        };
    }

}